# xipdriver-rs

./: .gitignore  Cargo.toml  README.md
examples/: dma.rs  lane_detect.rs  lane_yuyv.rs  motor.rs  v_frmbuf.rs  vdma.rs  yuyv2rgb.rs
src/: axidma.rs  axigpio.rs  axis_switch.rs  bird_eye_view.rs  hwh_parser.rs  hwinfo.rs  lib.rs  mem.rs  umv_lane_detector.rs  umv_motor_controller.rs  v_frmbuf.rs  v_proc_ss.rs  vdma.rs  yolo.rs
