[package]
name = "xipdriver-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
image = "0.24.6"
imageproc = "0.23.0"
jelly-mem_access = "0.1.8"
roxmltree = "0.4.1"
serde_json = "1.0.96"
